@@ -105,16 +105,6 @@ class CConfiguration extends CMap
 	/**
 	 * Creates an object and initializes it based on the given configuration.
 	 *
-	 * The specified configuration can be either a string or an array.
-	 * If the former, the string is treated as the object type which can
-	 * be either the class name or {@link YiiBase::getPathOfAlias class path alias}.
-	 * If the latter, the element indexed by 0 or 'class' is treated as the object type,
-	 * and the rest name-value pairs in the array are used to initialize
-	 * the corresponding object properties.
-	 *
-	 * Any additional parameters passed to this method will be
-	 * passed to the constructor of the object being created.
-	 *
 	 * NOTE: this method has been deprecated since version 1.0.1.
 	 * Please use {@link YiiBase::createComponent Yii::createComponent}, instead.
 	 *
@@ -124,30 +114,8 @@ class CConfiguration extends CMap
 	 */
 	public static function createObject($config)
 	{
-		if(is_string($config))
-			$config=array($config);
-		else if($config instanceof self)
+		if($config instanceof self)
 			$config=$config->toArray();
-
-		if(is_array($config) && (isset($config[0]) || isset($config['class'])))
-		{
-			$type=isset($config[0])?$config[0]:$config['class'];
-			unset($config[0],$config['class']);
-			$className=Yii::import($type,true);
-			if(($n=func_num_args())>1)
-			{
-				$args=func_get_args();
-				for($s='$args[1]',$i=2;$i<$n;++$i)
-					$s.=",\$args[$i]";
-				eval("\$object=new $className($s);");
-			}
-			else
-				$object=new $className;
-			foreach($config as $key=>$value)
-				$object->$key=$value;
-			return $object;
-		}
-		else
-			throw new CException(Yii::t('yii','Object configuration must be an array containing a "class" element.'));
+		return Yii::createComponent($config);
 	}
 }
